# 2024SciComProCoder-exercise

./: CMakeLists.txt  README.md  a.out  integral.h  kernel.h  log.txt  main.cpp  matrix.h  pyscf-HF-note.ipynb  run.sh
blas-test/: dgeev.cpp  ssyeve.cpp
include/: allocator.h  matrix.h  shape.h  storage.h
include/utils/: tools.h
integral/: Hcore_H2-pyscf.txt  Hcore_LiH-pyscf.txt
src/: allocator.cpp  shape.cpp
